Add docs for order checkout
